--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+ 
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
